...
            create: (BuildContext context) => di.setUp<LogOutCubit>(),
          ),
          BlocProvider<DeleteOrderCubit>(
            create: (BuildContext context) => di.setUp<DeleteOrderCubit>(),
          ),
        ],
        child: BottomNavigation(key: const Key('BottomNavigation')),
      ),
    ),
    GoRoute(
      path: AppRoutes.baristaHome,
      builder: (context, state) => MultiBlocProvider(
        providers: [
...
